syntax = "proto3";

service GstoreService {
	rpc Write (WriteRequest) returns (WriteReply);
	rpc Read (ReadRequest) returns (ReadReply);
	rpc ListServer (ListServerRequest) returns (ListServerReply);
}

message ListServerRequest {
	
}

message ListServerReply {
	repeated Object objects = 1;
}

message Object {
    bool master = 1;
    string server_id = 2;
    string partition_id = 3;
    string object_id = 4;
    string value = 5;
}

message WriteRequest {
	string partition_id = 1;
	string object_id = 2;
	string value = 3;
}

message WriteReply {
	bool ok = 1;
}

message ReadRequest {
	string partition_id = 1;
	string object_id = 2;
}

message ReadReply {
	string value = 1;
}